# yet-another-js-framework

./: README.md
BE/: .env.example  .gitignore  Cargo.toml  README.md  mix.exs  start.dev.sh
BE/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  runtime.exs  test.exs
BE/lib/: yajsf_backend.ex  yajsf_backend_web.ex
BE/lib/yajsf_backend/: application.ex  env.ex  github_trending.ex  javascript_quiz.ex  mailer.ex  scheduler.ex
BE/lib/yajsf_backend_web/: api_spec.ex  endpoint.ex  gettext.ex  router.ex  telemetry.ex
BE/lib/yajsf_backend_web/controllers/: page_controller.ex  ping_controller.ex  strapi_controller.ex
BE/lib/yajsf_backend_web/openapi/: strapi.ex
BE/lib/yajsf_backend_web/templates/layout/: root.html.heex
BE/lib/yajsf_backend_web/views/: error_helpers.ex  error_view.ex  layout_view.ex  page_view.ex
BE/src/: api.rs  api_state.rs  main.rs
BE/src/strapi/: handlers.rs  types.rs
BE/test/support/: conn_case.ex
BE/test/yajsf_backend_web/controllers/: page_controller_test.exs
BE/test/yajsf_backend_web/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
CMS/: package.json
CMS/config/: database.ts
FE/: app.vue  constants.ts  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
FE/assets/scss/: main.scss  tailwind.scss
FE/components/atoms/: AnimatedPlaceholder.vue  (+11 more)
FE/composables/: formatter.test.ts  formatter.ts
FE/docs/: Testing.md
FE/plugins/: highlight.ts
FE/stores/: menuStore.ts  scrollProgressStore.ts
FE/types/: enums.ts  index.ts
utils/javascript_quiz/: Cargo.toml
(+83 files in other folders)
